--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -10,6 +10,15 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag gpost:$(date +%s) --build-arg=BASE_IMAGE="ubuntu:jammy"
+      - uses: actions/checkout@v2
+      - uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build the Odoo Runner 16.0 Docker image
+        run: |
+            timetag=(`date +%Y%M%d`)
+            docker build . --tag ghcr.io/viraweb123/gpost:${timetag} --tag ghcr.io/viraweb123/gpost:latest --build-arg=BASE_IMAGE="ubuntu:jammy"
+            docker push ghcr.io/viraweb123/odoo-runner:latest
+            docker push ghcr.io/viraweb123/odoo-runner:${timetag}
