[fix] gpost image name for tag latest

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,9 +16,9 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Build the Odoo Runner 16.0 Docker image
+      - name: Build the GPost Docker image
         run: |
             timetag=(`date +%Y%M%d`)
-            docker build . --tag ghcr.io/viraweb123/gpost:${timetag} --tag ghcr.io/viraweb123/c:latest --build-arg=BASE_IMAGE="ubuntu:jammy"
+            docker build . --tag ghcr.io/viraweb123/gpost:${timetag} --tag ghcr.io/viraweb123/gpost:latest --build-arg=BASE_IMAGE="ubuntu:jammy"
             docker push ghcr.io/viraweb123/gpost:latest
             docker push ghcr.io/viraweb123/gpost:${timetag}
