--- a/configs/rsyslog.conf
+++ b/configs/rsyslog.conf
@@ -1,5 +1,8 @@
-$ModLoad immark.so # provides --MARK-- message capability
-$ModLoad imuxsock.so # provides support for local system logging (e.g. via logger command)
+# provides --MARK-- message capability
+$ModLoad immark.so 
+
+# provides support for local system logging (e.g. via logger command)
+$ModLoad imuxsock.so 
 
 # default permissions for all log files.
 $FileOwner root
