--- a/configs/supervisord.conf
+++ b/configs/supervisord.conf
@@ -21,6 +21,10 @@ autostart       = true
 autorestart     = false
 directory       = /etc/postfix
 startsecs       = 0
+stdout_logfile  = /dev/stdout
+stderr_logfile  = /dev/stderr
+stdout_logfile_maxbytes = 0
+stderr_logfile_maxbytes = 0
 
 [program:opendkim]
 command         = /usr/bin/opendkim.sh
